try to add native access